# espn-ffl

./: CLI_REFERENCE.md  Cargo.toml  README.md  tarpaulin.toml
.github/workflows/: ci.yml  coverage.yml  release.yml
coverage/: tarpaulin-report.html
src/: api.rs  cache.rs  cli.rs  cli_types.rs  commands.rs  database.rs  error.rs  filters.rs  lib.rs  main.rs  positions.rs  util.rs
src/cache/: tests.rs
src/cli/: args.rs  mod.rs  types.rs
src/cli/types/: filters.rs  ids.rs  mod.rs  position.rs  time.rs
src/cli_types/: tests.rs
src/commands/: common.rs  league_data.rs  mod.rs  player_data.rs  player_filters.rs  projection_analysis.rs  tests.rs  update_all_data.rs
src/core/: cache.rs  filters.rs  http.rs  mod.rs
src/database/: tests.rs
src/error/: tests.rs
src/espn/: cache_settings.rs  compute.rs  http.rs  mod.rs  types.rs
src/espn/compute/: tests.rs
src/espn/http/: integration_tests.rs  tests.rs
src/espn/types/: tests.rs
src/filters/: tests.rs
src/models/: output.rs  stat_source.rs
src/storage/: analysis.rs  mod.rs  models.rs  queries.rs  schema.rs  tests.rs
src/util/: tests.rs
tests/: commands_test.rs  error_test.rs  espn_compute_test.rs  espn_types_test.rs  storage_test.rs
