[package]
name = "espn-ffl"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "6.0.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"
tempfile = "3.0"
assert_matches = "1.5"
wiremock = "0.5"

# Coverage reporting
[package.metadata.coverage.report]
# Configure tarpaulin coverage
exclude_files = [
    "src/main.rs",      # CLI entry point - tested via integration
    "*/tests.rs",       # Test files themselves
    "*/tests/*",        # Test modules
]
