[package]
name = "espn-ffl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
assert_matches = "1.5"
mockall = "0.12"
tempfile = "3.22"
tokio-test = "0.4"
wiremock = "0.5"

# Coverage reporting
[package.metadata.coverage.report]
# Configure tarpaulin coverage
exclude_files = [
    "src/main.rs",      # CLI entry point - tested via integration
    "*/tests.rs",       # Test files themselves
    "*/tests/*",        # Test modules
]
